--- a/scss/_discover.scss
+++ b/scss/_discover.scss
@@ -465,6 +465,15 @@
   }
 }
 
+/*===================425====================================*/
+
+
+@media (max-width: 425px) {
+  .discover__list-item {
+    width: 69.8vw;
+  }
+}
+
 /*===================390====================================*/
 
 
@@ -473,7 +482,7 @@
     width: 146px;
   }
   .discover__list-item {
-    width: 81.8vw;
+    width: 90.8vw;
   }
 }
 
